--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -1,21 +1,53 @@
 body {
+  background-color: #d9dcd6;
   font-family: Verdana, sans-serif;
   font-size: 15px;
   line-height: 1.5;
   margin: 0;
 }
-
-.narBarDiv {
-font-family: "Lucida Console", Monaco, monospace;
-  color: white;
-  background-color: black
-
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
-.navBar {
-background-color: yellow;
-margin: auto;
-padding-top: 10px;
-padding-bottom: 10px;
+
+header {
+  padding: 20px;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  background-color: #2a607c;
+  color: #ffffff;
+}
+
+header h1 {
+  display: inline-block;
+  font-size: 48px;
+}
+
+header nav {
+  padding-top: 15px;
+  margin-right: 20px;
+  float: right;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 20px;
+}
+
+header nav ul {
+  list-style-type: none;
+}
+
+header nav ul li {
+  display: inline-block;
+  margin-left: 25px;
+}
+
+.float-left {
+  float: left;
+  margin-right: 25px;
+}
+
+.float-right {
+  float: right;
+  margin-left: 25px;
 }
 
 .homeclass {
