--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -1,3 +1,9 @@
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
 body {
   background-color: #d9dcd6;
   font-family: Verdana, sans-serif;
@@ -5,17 +11,22 @@ body {
   line-height: 1.5;
   margin: 0;
 }
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+
+.float-left {
+  float: left;
+  margin-right: 25px;
+}
+
+.float-right {
+  float: right;
+  margin-left: 25px;
 }
 
 header {
   padding: 20px;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   background-color: #2a607c;
-  color: #ffffff;
+  color: rgb(247, 217, 248);
 }
 
 header h1 {
@@ -40,24 +51,21 @@ header nav ul li {
   margin-left: 25px;
 }
 
-.float-left {
-  float: left;
-  margin-right: 25px;
-}
-
-.float-right {
-  float: right;
-  margin-left: 25px;
-}
-
 .homeclass {
-background-color: turquoise;
+background-color: rgb(247, 217, 248);
 padding-top: 5%;
 padding-bottom: 50%;
 text-align: center;
 }
 .me{
     height: 200px;
+}
+
+.navBarButtons{
+  color: black;
+  background-color: rgb(247, 217, 248);
+  padding: 14%;
+  border-radius: 40%
 }
 
 .project img {
